# ChangeLog for sci-astronomy/sextractor
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-astronomy/sextractor/ChangeLog,v 1.3 2011/08/04 18:32:38 bicatali Exp $

  27 Feb 2014; Sébastien Fabbro <bicatali@gentoo.org>
  sextractor-2.8.6-r1.ebuild, sextractor-9999.ebuild:
  sci-astronomy/sextractor: EAPI-5, autotools-utils, missing threads on atlas

*sextractor-9999 (04 Jul 2012)

  04 Jul 2012; Sébastien Fabbro <bicatali@gentoo.org>
  sextractor-2.8.6-r1.ebuild, +sextractor-9999.ebuild, metadata.xml:
  Live version, introduced prefix love

*sextractor-2.8.6-r1 (28 Nov 2011)

  28 Nov 2011; Sébastien Fabbro <bicatali@gentoo.org>
  +sextractor-2.8.6-r1.ebuild, +files/sextractor-configure.patch,
  +metadata.xml:
  Fixed for recent ATLAS. Switch to EAPI4

  04 Aug 2011; Sébastien Fabbro <bicatali@gentoo.org> metadata.xml:
  Switched herd to sci-astronomy

*sextractor-2.8.6 (28 Jul 2009)

  28 Jul 2009; Sébastien Fabbro <bicatali@gentoo.org>
  +sextractor-2.8.6.ebuild, +files/sextractor-configure.patch:
  Version bump

*sextractor-2.5.0 (17 Feb 2009)

  17 Feb 2009; Sébastien Fabbro <bicatali@gentoo.org> +metadata.xml,
  +sextractor-2.5.0.ebuild:
  Initial import to the main tree from the sci overlay, closing bug #65684

  02 Aug 2007; Sébastien Fabbro <bicatali@gentoo.org>
  sextractor-2.5.0-r1.ebuild:
  filter optim flags

  26 Mar 2007; Sébastien Fabbro <bicatali@gentoo.org>
  sextractor-2.5.0-r1.ebuild:
  Cleaning, adapting for new portage.

  29 Dec 2006; Sebastien Fabbro <seb@ist.utl.pt>;
  Removed icc flag, too buggy.
	
  15 Oct 2006; Sebastien Fabbro <seb@ist.utl.pt> 
  +sextractor-2.5.0-r1.ebuild -sextractor-2.5.0.ebuild
  -sextractor-2.4.4.ebuild: removed flag filtering, cleaning,
  removed old versions.

  06 Sep 2006; Sebastien Fabbro <seb@ist.utl.pt> +sextractor-2.5.0.ebuild:
  Version bump.
	
  26 Nov 2005; Sebastien Fabbro <seb@ist.utl.pt> +sextractor-2.4.4.ebuild: