@@ -1,1 +1,2 @@
+DIST sextractor-2.19.5.tar.gz 4317039 SHA256 2a880e018585f905300d5919ab454b18640a5bef13deb5c4f03111ac4710b2c5 SHA512 aadd007facad983ea35bd7496a53520f987aa8e492259e428170354d262212e3c1a17c60bf6ea97b6056136b0bd02793e92e14b21cb40a0f8886245eeeac6f4d WHIRLPOOL cf499f4763ebf07d94ccb630030baa1b1e3e03972a9f214ee965c1f742548ee46fa4ce22203d1a6ee7c0817c2915d36483d1a7d7fcc04348beb559f5b5dd4464
 DIST sextractor-2.8.6.tar.gz 3994622 SHA256 dde34594c2a1324f0951272e404e55d0d4cb0607f8ea18a61f2563bb67f494ac SHA512 c8847f4feb45000eac02ae8fe9747b6c4a1faf0d8722e87f07699c25d71a1bcd44d8cf88df852453a3a45762deb7420cb79aca1d763543f1253755a59f585b70 WHIRLPOOL 4a8be697df11cac64980e8ee828ea61ba839a67219a9918e941a1354fc3294c80d4442eb7f91202d16315d7f454d73897a156921acd090cff836838f8eba2c29
