@@ -2,6 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sci-astronomy/sextractor/ChangeLog,v 1.3 2011/08/04 18:32:38 bicatali Exp $
 
+*sextractor-2.19.5 (21 Mar 2014)
+
+  21 Mar 2014; Sébastien Fabbro <bicatali@gentoo.org> +sextractor-2.19.5.ebuild,
+  sextractor-9999.ebuild:
+  sci-astronomy/sextractor: Add new version linked to live one
+
   27 Feb 2014; Sébastien Fabbro <bicatali@gentoo.org>
   sextractor-2.8.6-r1.ebuild, sextractor-9999.ebuild:
   sci-astronomy/sextractor: EAPI-5, autotools-utils, missing threads on atlas
